win32ss/dwm/milcore/include/Generated/wgx_commands.h

typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    BOOL Suppress;
} MILCMD_HWNDTARGET_SUPPRESSLAYERED;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    RECT windowRect;
    MilWindowLayerType::Enum windowLayerType;
    MilTransparency::Flags transparencyMode;
    FLOAT constantAlpha;
    BOOL isChild;
    BOOL isRTL;
    BOOL renderingEnabled;
    MilColorF colorKey;
    UINT disableCookie;
    BOOL gdiBlt;
} MILCMD_TARGET_UPDATEWINDOWSETTINGS;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    UINT64 hwnd;
    UINT64 pRenderTarget;
    UINT width;
    UINT height;
    UINT dummy;
} MILCMD_GENERICTARGET_CREATE;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    HMIL_RESOURCE hRoot;
} MILCMD_TARGET_SETROOT;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    MilColorF clearColor;
} MILCMD_TARGET_SETCLEARCOLOR;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    RECT rc;
} MILCMD_TARGET_INVALIDATE;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    UINT flags;
} MILCMD_TARGET_SETFLAGS;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    DOUBLE DpiX;
    DOUBLE DpiY;
    BOOL AfterParent;
} MILCMD_HWNDTARGET_DPICHANGED;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    UINT64 pIDWriteFont;
    WORD GlyphRunFlags;
    UINT16 UINT16Padding0;
    MilPoint2F Origin;
    FLOAT MuSize;
    MilPointAndSizeD ManagedBounds;
    WORD GlyphCount;
    UINT16 UINT16Padding1;
    WORD BidiLevel;
    UINT16 UINT16Padding2;
    WORD DWriteTextMeasuringMethod;
    UINT16 UINT16Padding3;
} MILCMD_GLYPHRUN_CREATE;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    UINT64 SwDoubleBufferedBitmap;
    BOOL UseBackBuffer;
} MILCMD_DOUBLEBUFFEREDBITMAP;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    UINT64 CopyCompletedEvent;
} MILCMD_DOUBLEBUFFEREDBITMAP_COPYFORWARD;
typedef struct
{
    MILCMD Type;
    BOOL ShouldRenderEvenWhenNoDisplayDevicesAreAvailable;
} MILCMD_PARTITION_NOTIFYPOLICYCHANGEFORNONINTERACTIVEMODE;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    DOUBLE angle;
    MilPoint3F axis;
    HMIL_RESOURCE hAxisAnimations;
    HMIL_RESOURCE hAngleAnimations;
} MILCMD_AXISANGLEROTATION3D;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    MilQuaternionF quaternion;
    HMIL_RESOURCE hQuaternionAnimations;
} MILCMD_QUATERNIONROTATION3D;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    DOUBLE nearPlaneDistance;
    DOUBLE farPlaneDistance;
    DOUBLE fieldOfView;
    MilPoint3F position;
    HMIL_RESOURCE htransform;
    MilPoint3F lookDirection;
    HMIL_RESOURCE hNearPlaneDistanceAnimations;
    MilPoint3F upDirection;
    HMIL_RESOURCE hFarPlaneDistanceAnimations;
    HMIL_RESOURCE hPositionAnimations;
    HMIL_RESOURCE hLookDirectionAnimations;
    HMIL_RESOURCE hUpDirectionAnimations;
    HMIL_RESOURCE hFieldOfViewAnimations;
} MILCMD_PERSPECTIVECAMERA;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    DOUBLE nearPlaneDistance;
    DOUBLE farPlaneDistance;
    DOUBLE width;
    MilPoint3F position;
    HMIL_RESOURCE htransform;
    MilPoint3F lookDirection;
    HMIL_RESOURCE hNearPlaneDistanceAnimations;
    MilPoint3F upDirection;
    HMIL_RESOURCE hFarPlaneDistanceAnimations;
    HMIL_RESOURCE hPositionAnimations;
    HMIL_RESOURCE hLookDirectionAnimations;
    HMIL_RESOURCE hUpDirectionAnimations;
    HMIL_RESOURCE hWidthAnimations;
} MILCMD_ORTHOGRAPHICCAMERA;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    D3DMATRIX viewMatrix;
    D3DMATRIX projectionMatrix;
    HMIL_RESOURCE htransform;
} MILCMD_MATRIXCAMERA;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    HMIL_RESOURCE htransform;
    UINT32 ChildrenSize;
} MILCMD_MODEL3DGROUP;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    MilColorF color;
    HMIL_RESOURCE htransform;
    HMIL_RESOURCE hColorAnimations;
} MILCMD_AMBIENTLIGHT;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    MilColorF color;
    MilPoint3F direction;
    HMIL_RESOURCE htransform;
    HMIL_RESOURCE hColorAnimations;
    HMIL_RESOURCE hDirectionAnimations;
} MILCMD_DIRECTIONALLIGHT;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    MilColorF color;
    DOUBLE range;
    DOUBLE constantAttenuation;
    DOUBLE linearAttenuation;
    DOUBLE quadraticAttenuation;
    MilPoint3F position;
    HMIL_RESOURCE htransform;
    HMIL_RESOURCE hColorAnimations;
    HMIL_RESOURCE hPositionAnimations;
    HMIL_RESOURCE hRangeAnimations;
    HMIL_RESOURCE hConstantAttenuationAnimations;
    HMIL_RESOURCE hLinearAttenuationAnimations;
    HMIL_RESOURCE hQuadraticAttenuationAnimations;
} MILCMD_POINTLIGHT;
typedef struct
{
    MILCMD Type;
    HMIL_RESOURCE Handle;
    MilColorF color;
    DOUBLE range;
    DOUBLE constantAttenuation;
    DOUBLE linearAttenuation;
    DOUBLE quadraticAttenuation;
    DOUBLE outerConeAngle;
    DOUBLE innerConeAngle;
    MilPoint3F position;
    HMIL_RESOURCE htransform;
    MilPoint3F direction;
    HMIL_RESOURCE hColorAnimations;
    HMIL_RESOURCE hPositionAnimations;
    HMIL_RESOURCE hRangeAnimations;
    HMIL_RESOURCE hConstantAttenuationAnimations;
    HMIL_RESOURCE hLinearAttenuationAnimations;
    HMIL_RESOURCE hQuadraticAttenuationAnimations;
    HMIL_RESOURCE hDirectionAnimations;
    HMIL_RESOURCE hOuterConeAngleAnimations;
    HMIL_RESOURCE hInnerConeAngleAnimations;
} MILCMD_SPOTLIGHT;