win32ss/dwm/milcore/include/Generated/wgx_commands.cs

        [FieldOffset(16)] internal UInt64 hSection;
        [FieldOffset(24)] internal UInt64 masterDevice;
        [FieldOffset(32)] internal UInt32 width;
        [FieldOffset(36)] internal UInt32 height;
        [FieldOffset(40)] internal MilColorF clearColor;
        [FieldOffset(56)] internal UInt32 flags;
        [FieldOffset(60)] internal DUCE.ResourceHandle hBitmap;
        [FieldOffset(64)] internal UInt32 stride;
        [FieldOffset(68)] internal UInt32 ePixelFormat;
        [FieldOffset(72)] internal int DpiAwarenessContext;
        [FieldOffset(76)] internal double DpiX;
        [FieldOffset(84)] internal double DpiY;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_HWNDTARGET_SUPPRESSLAYERED
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal BOOL Suppress;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_TARGET_UPDATEWINDOWSETTINGS
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal MS.Win32.NativeMethods.RECT windowRect;
        [FieldOffset(24)] internal MILWindowLayerType windowLayerType;
        [FieldOffset(28)] internal MILTransparencyFlags transparencyMode;
        [FieldOffset(32)] internal float constantAlpha;
        [FieldOffset(36)] internal BOOL isChild;
        [FieldOffset(40)] internal BOOL isRTL;
        [FieldOffset(44)] internal BOOL renderingEnabled;
        [FieldOffset(48)] internal MilColorF colorKey;
        [FieldOffset(64)] internal UInt32 disableCookie;
        [FieldOffset(68)] internal BOOL gdiBlt;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_GENERICTARGET_CREATE
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal UInt64 hwnd;
        [FieldOffset(16)] internal UInt64 pRenderTarget;
        [FieldOffset(24)] internal UInt32 width;
        [FieldOffset(28)] internal UInt32 height;
        [FieldOffset(32)] internal UInt32 dummy;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_TARGET_SETROOT
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal DUCE.ResourceHandle hRoot;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_TARGET_SETCLEARCOLOR
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal MilColorF clearColor;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_TARGET_INVALIDATE
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal MS.Win32.NativeMethods.RECT rc;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_TARGET_SETFLAGS
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal UInt32 flags;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_HWNDTARGET_DPICHANGED
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal double DpiX;
        [FieldOffset(16)] internal double DpiY;
        [FieldOffset(24)] internal BOOL AfterParent;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_GLYPHRUN_CREATE
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal UInt64 pIDWriteFont;
        [FieldOffset(16)] internal UInt16 GlyphRunFlags;
        [FieldOffset(20)] internal MilPoint2F Origin;
        [FieldOffset(28)] internal float MuSize;
        [FieldOffset(32)] internal Rect ManagedBounds;
        [FieldOffset(64)] internal UInt16 GlyphCount;
        [FieldOffset(68)] internal UInt16 BidiLevel;
        [FieldOffset(72)] internal UInt16 DWriteTextMeasuringMethod;
        [FieldOffset(75)] private byte BYTEPacking0;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_DOUBLEBUFFEREDBITMAP
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal UInt64 SwDoubleBufferedBitmap;
        [FieldOffset(16)] internal BOOL UseBackBuffer;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_DOUBLEBUFFEREDBITMAP_COPYFORWARD
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal UInt64 CopyCompletedEvent;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_PARTITION_NOTIFYPOLICYCHANGEFORNONINTERACTIVEMODE
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal BOOL ShouldRenderEvenWhenNoDisplayDevicesAreAvailable;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_AXISANGLEROTATION3D
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal double angle;
        [FieldOffset(16)] internal MilPoint3F axis;
        [FieldOffset(28)] internal DUCE.ResourceHandle hAxisAnimations;
        [FieldOffset(32)] internal DUCE.ResourceHandle hAngleAnimations;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_QUATERNIONROTATION3D
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal MilQuaternionF quaternion;
        [FieldOffset(24)] internal DUCE.ResourceHandle hQuaternionAnimations;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_PERSPECTIVECAMERA
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal double nearPlaneDistance;
        [FieldOffset(16)] internal double farPlaneDistance;
        [FieldOffset(24)] internal double fieldOfView;
        [FieldOffset(32)] internal MilPoint3F position;
        [FieldOffset(44)] internal DUCE.ResourceHandle htransform;
        [FieldOffset(48)] internal MilPoint3F lookDirection;
        [FieldOffset(60)] internal DUCE.ResourceHandle hNearPlaneDistanceAnimations;
        [FieldOffset(64)] internal MilPoint3F upDirection;
        [FieldOffset(76)] internal DUCE.ResourceHandle hFarPlaneDistanceAnimations;
        [FieldOffset(80)] internal DUCE.ResourceHandle hPositionAnimations;
        [FieldOffset(84)] internal DUCE.ResourceHandle hLookDirectionAnimations;
        [FieldOffset(88)] internal DUCE.ResourceHandle hUpDirectionAnimations;
        [FieldOffset(92)] internal DUCE.ResourceHandle hFieldOfViewAnimations;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_ORTHOGRAPHICCAMERA
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal double nearPlaneDistance;
        [FieldOffset(16)] internal double farPlaneDistance;
        [FieldOffset(24)] internal double width;
        [FieldOffset(32)] internal MilPoint3F position;
        [FieldOffset(44)] internal DUCE.ResourceHandle htransform;
        [FieldOffset(48)] internal MilPoint3F lookDirection;
        [FieldOffset(60)] internal DUCE.ResourceHandle hNearPlaneDistanceAnimations;
        [FieldOffset(64)] internal MilPoint3F upDirection;
        [FieldOffset(76)] internal DUCE.ResourceHandle hFarPlaneDistanceAnimations;
        [FieldOffset(80)] internal DUCE.ResourceHandle hPositionAnimations;
        [FieldOffset(84)] internal DUCE.ResourceHandle hLookDirectionAnimations;
        [FieldOffset(88)] internal DUCE.ResourceHandle hUpDirectionAnimations;
        [FieldOffset(92)] internal DUCE.ResourceHandle hWidthAnimations;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_MATRIXCAMERA
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal D3DMATRIX viewMatrix;
        [FieldOffset(72)] internal D3DMATRIX projectionMatrix;
        [FieldOffset(136)] internal DUCE.ResourceHandle htransform;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_MODEL3DGROUP
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal DUCE.ResourceHandle htransform;
        [FieldOffset(12)] internal UInt32 ChildrenSize;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_AMBIENTLIGHT
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal MilColorF color;
        [FieldOffset(24)] internal DUCE.ResourceHandle htransform;
        [FieldOffset(28)] internal DUCE.ResourceHandle hColorAnimations;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_DIRECTIONALLIGHT
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal MilColorF color;
        [FieldOffset(24)] internal MilPoint3F direction;
        [FieldOffset(36)] internal DUCE.ResourceHandle htransform;
        [FieldOffset(40)] internal DUCE.ResourceHandle hColorAnimations;
        [FieldOffset(44)] internal DUCE.ResourceHandle hDirectionAnimations;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_POINTLIGHT
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal MilColorF color;
        [FieldOffset(24)] internal double range;
        [FieldOffset(32)] internal double constantAttenuation;
        [FieldOffset(40)] internal double linearAttenuation;
        [FieldOffset(48)] internal double quadraticAttenuation;
        [FieldOffset(56)] internal MilPoint3F position;
        [FieldOffset(68)] internal DUCE.ResourceHandle htransform;
        [FieldOffset(72)] internal DUCE.ResourceHandle hColorAnimations;
        [FieldOffset(76)] internal DUCE.ResourceHandle hPositionAnimations;
        [FieldOffset(80)] internal DUCE.ResourceHandle hRangeAnimations;
        [FieldOffset(84)] internal DUCE.ResourceHandle hConstantAttenuationAnimations;
        [FieldOffset(88)] internal DUCE.ResourceHandle hLinearAttenuationAnimations;
        [FieldOffset(92)] internal DUCE.ResourceHandle hQuadraticAttenuationAnimations;
        };
        [StructLayout(LayoutKind.Explicit, Pack=1)]
        internal struct MILCMD_SPOTLIGHT
        {
        [FieldOffset(0)] internal MILCMD Type;
        [FieldOffset(4)] internal DUCE.ResourceHandle Handle;
        [FieldOffset(8)] internal MilColorF color;
        [FieldOffset(24)] internal double range;
        [FieldOffset(32)] internal double constantAttenuation;
        [FieldOffset(40)] internal double linearAttenuation;
        [FieldOffset(48)] internal double quadraticAttenuation;
        [FieldOffset(56)] internal double outerConeAngle;
